--- a/content/pr_20210707.md
+++ b/content/pr_20210707.md
@@ -185,7 +185,7 @@ Conversation Over: Success, Target 2/3
 
 ---
 
-## What's next?
+## Next...
 
 - Datasets
 - Study Factorization Machine (FM) Model & other recommendation methods
