--- a/content/pr_20210707.md
+++ b/content/pr_20210707.md
@@ -7,7 +7,7 @@ external_link: ""
 ---
 
 # Progress Report - 20210707 <!-- .element: class="title" -->
-##  <!-- .element: class="subtitle" -->
+## Surveying... <!-- .element: class="subtitle" -->
 
 <div class="title-name">
 2021.07.07 <br>
