--- a/content/pr_20210707.md
+++ b/content/pr_20210707.md
@@ -41,7 +41,7 @@ Yu-Hung, Wu
 
 - Delexicalization
     - Not a word...
-    - Match the target values back to the written utterances, and substitute them with the placeholders, e.g. <location>, <price>...
+    - Match the target values back to the written utterances, and substitute them with the placeholders, e.g. location, price...
     - Thus get 2275 times more dialogue sets (875721)
 
 ----
