--- a/content/pr_20210707.md
+++ b/content/pr_20210707.md
@@ -21,7 +21,7 @@ Yu-Hung, Wu
 - Read a paper (Conversational Recommender System) & Recommendation Systems
 - Dataset
 - Experiment
-- Future Work
+- Todo
 
 ---
 
@@ -185,7 +185,7 @@ Conversation Over: Success, Target 2/3
 
 ---
 
-## Next...
+## Todo...
 
 - Datasets
 - Study Factorization Machine (FM) Model & other recommendation methods
