--- a/content/pr_20210707.md
+++ b/content/pr_20210707.md
@@ -18,7 +18,7 @@ Yu-Hung, Wu
 
 ## Outline
 
-- Read a paper (Conversational Recommender System) & Recommendation Systems
+- Read a paper (Conversational Recommender System) & Recommendation Systems [[Notion notes]](https://www.notion.so/Conversational-Recommender-System-177b2aa611ba42cb85d6a05f2e57dfeb)
 - Dataset
 - Experiment
 - Todo
