--- a/content/pr_20210714.md
+++ b/content/pr_20210714.md
@@ -35,6 +35,7 @@ Yu-Hung, Wu
 
 - The "COOKIE dataset" (Nov. 2020, cited by 5)
 - A Dataset for conversational recommendation over KGs in E-commerce
+- The dataset is constructed from an Amazon review corpus by integrating both user–agent dialogue and custom knowledge graphs for recommendation.
 - Still under investigating...
 
 https://arxiv.org/abs/2008.09237 <!-- .element: class="footnote" -->
