--- a/content/pr_20210721.md
+++ b/content/pr_20210721.md
@@ -94,6 +94,27 @@ chatbot:你這個表情
 
 ## Sample response.
 
+Learn from pretrained, epoch 6 (still training...)
+
+```
+user:我明天要去爬山
+chatbot:你們這些山上有野生動物嗎？
+user:有獨角獸
+chatbot:我想養只狗
+user:好啊我幫你抓一隻回來
+chatbot:嗯吶
+user:疫情結束了，我終於可以聚餐了
+chatbot:我也是！
+user:要吃什麼好呢
+chatbot:吃個飯，就可以了哈哈
+user:公鹿跟太陽誰會贏球？
+chatbot:就是公鹿
+```
+
+----
+
+## Sample response..
+
 Learn from scratch, epoch 18
 
 ```
