--- a/content/pr_20210811.md
+++ b/content/pr_20210811.md
@@ -40,6 +40,12 @@ Yu-Hung, Wu
     - Acurracy: Significantly better than the previous model
     - Loss: Converge faster than the previous model
 
+----
+
+## GPT-2 vs. GPT-2 + Transformer
+
+![](attachments/2021-08-11-10-12-56.png)
+
 ---
 
 ## Linebot <!-- .element: class="section-title" -->
