--- a/content/pr_20210811.md
+++ b/content/pr_20210811.md
@@ -82,3 +82,9 @@ Yu-Hung, Wu
 ## Todo
 
 - Refresh the dialogue
+
+---
+
+## Linebot <!-- .element: class="section-title" -->
+
+- Refresh the dialogue
