--- a/content/pr_20210825.md
+++ b/content/pr_20210825.md
@@ -34,7 +34,7 @@ Yu-Hung, Wu
 
 ----
 
-## w/ the MMI model (#9 epoch)
+## w/ the MMI model (#9 epoch, lowest perplexity)
 
 ```
 user:你好
@@ -51,7 +51,7 @@ chatbot:那你要提前告訴我，我們週一要去
 
 ----
 
-## w/ the MMI model (#20 epoch)
+## w/ the MMI model (#20 epoch, lowest training loss)
 
 ```
 user:你好
@@ -70,5 +70,45 @@ chatbot:哈哈哈哈哈我也想啊
 
 ## The PERSONA-CHAT dataset   <!-- .element: class="section-title" -->
 
+https://parl.ai/ <!-- .element: class="footnote" -->
+
 ----
 
+## Example Dialogue
+
+| A's persona | B's persona |
+| :--------: | :--------: |  
+|I like to ski | I am an artist|
+|My wife does not like me anymore | I have four children|
+|I have went to Mexico 4 times this year | I recently got a cat|
+|I hate Mexican food | I enjoy walking for exercise|
+|I like to eat cheetos | I love watching Game of Thrones|
+
+
+----
+
+## Example Dialogue.
+
+```txt
+A: Hi
+B: Hello ! How are you today?
+A: I am good thank you , how are you.
+B: Great, thanks ! My children and I were just about to watch Game of Thrones.
+A: Nice ! How old are your children?
+B: I have four that range in age from 10 to 21. You?
+A: I do not have children at the moment.
+B: That just means you get to keep all the popcorn for yourself.
+A: And Cheetos at the moment!
+B: Good choice. Do you watch Game of Thrones?
+A: No, I do not have much time for TV.
+B: I usually spend my time painting: but, I love the show.
+```
+
+----
+
+## Statistics
+
+- 8939 training dialogs, 1000 valid dialogs, 968 testing dialogs
+- 4-5 personas for both turkers in each dialog
+- maximum of 15 words for each utterance
+- Still preprocessing
