--- a/content/pr_20210825.md
+++ b/content/pr_20210825.md
@@ -40,7 +40,7 @@ Yu-Hung, Wu
 user:你好
 chatbot:你好！
 user:晚餐吃什麼
-chatbot:哈哈哈哈哈哈，好久沒吃了，還在想
+chatbot:哈哈哈，好久沒吃了，還在想
 user:但我不想吃
 chatbot:那你就是想吃了，我也是
 user:週末去看海
@@ -76,13 +76,13 @@ https://parl.ai/ <!-- .element: class="footnote" -->
 
 ## Example Dialogue
 
-| A's persona | B's persona |
-| :--------: | :--------: |  
-|I like to ski | I am an artist|
-|My wife does not like me anymore | I have four children|
-|I have went to Mexico 4 times this year | I recently got a cat|
-|I hate Mexican food | I enjoy walking for exercise|
-|I like to eat cheetos | I love watching Game of Thrones|
+|               A's persona               |           B's persona           |
+| :-------------------------------------: | :-----------------------------: |
+|              I like to ski              |         I am an artist          |
+|    My wife does not like me anymore     |      I have four children       |
+| I have went to Mexico 4 times this year |      I recently got a cat       |
+|           I hate Mexican food           |  I enjoy walking for exercise   |
+|          I like to eat cheetos          | I love watching Game of Thrones |
 
 
 ----
