--- a/content/pr_20210825.md
+++ b/content/pr_20210825.md
@@ -112,3 +112,9 @@ B: I usually spend my time painting: but, I love the show.
 - 4-5 personas for both turkers in each dialog
 - maximum of 15 words for each utterance
 - Still preprocessing
+
+----
+
+## Todo
+
+![](attachments/2021-08-25-13-33-42.png) <!-- .element: class="img90" -->
