--- a/content/pr_20210825.md
+++ b/content/pr_20210825.md
@@ -118,3 +118,6 @@ B: I usually spend my time painting: but, I love the show.
 ## Todo
 
 ![](attachments/2021-08-25-13-33-42.png) <!-- .element: class="img90" -->
+
+- Meeting room?
+- Paper
