--- a/content/pr_20211006.md
+++ b/content/pr_20211006.md
@@ -74,7 +74,7 @@ chatbot:我覺得海灘很美
 
 ## Conclusion
 
-- Add Attention does help chatbot change the topic. Moreover, it can still maintain the same topic as the user replies bland response.
+- Adding weight does help chatbot change the topic. Moreover, it can still maintain the same topic as the user replies bland response.
 
 - With weight (weight = 100.0)
 
@@ -95,3 +95,31 @@ chatbot:我也不喜歡
 
 ----
 
+## Method
+
+- 2 GPT-2s
+
+![](attachments/2021-10-06-09-42-18.png) <!-- .element: class="img90" -->
+
+----
+
+## Method
+
+- Baseline (Todo)
+
+![](attachments/2021-10-06-09-44-24.png) <!-- .element: class="img80" -->
+
+----
+## In Progress...
+- Using the "PERSONA-CHAT" dataset
+- 8939 for training, 100 for validation and 968 for testing
+- Batch size = 2
+- The model converges significantly slower than before
+
+----
+
+## Todo
+
+- GPT-2 baseline
+- Add attention weight to the utterance GPT-2
+- Take a deeper look into position encoding in GPT-2
