--- a/content/Seminar_20211015.md
+++ b/content/Seminar_20211015.md
@@ -88,7 +88,7 @@ https://arxiv.org/abs/2002.12591 <!-- .element: class="footnote" -->
 
 - Rescore the relavance score with
 
-    ```prob_1 * BM25 + prob_2 * BERT, prob_1 + prob2 == 1```
+    $Score = 1 \times Score_{BM25} + Weight \times Score_{BERT}$
 
 ----
 
