--- a/content/Seminar_20211015.md
+++ b/content/Seminar_20211015.md
@@ -287,3 +287,9 @@ Where N<sub>q</sub> denote the number of questions, N<sub>d</sub> denote the num
 - This paper introduces DC-BERT to decouple question and document for efficient contextual encoding.
 
 - DC-BERT has been successfully applied to document retrieval, a key component in opendomain QA, achieving 10x speedup while retaining most of the QA performance.
+
+----
+
+## Conclusion
+
+![](attachments/2021-10-14-17-04-11.png) <!-- .element: class="img90" -->
