--- a/content/pr_20211020.md
+++ b/content/pr_20211020.md
@@ -66,7 +66,7 @@ Yu-Hung Wu @ Academia Sinica
 
 ## Method
 
-- The left GPT-2 feeds dialogue history, the right GPT-2 feeds the response.
+- The left GPT-2 feeds dialogue histories, the right GPT-2 feeds the response.
 
 - For the left GPT-2, the attention masks are eliminated.
 
@@ -78,4 +78,4 @@ Yu-Hung Wu @ Academia Sinica
 
 - Both baseline and tower models are still training.
 
-- The cross-entropy loss converges really fast.
+- The cross-entropy loss converges really fast (single > tower).
