--- a/content/pr_20211201.md
+++ b/content/pr_20211201.md
@@ -6,7 +6,7 @@ theme: theme/mytheme.css
 external_link: ""
 ---
 
-# Progress Report - 2021-12-01 <!-- .element: class="title" -->
+# Progress Report - 20211201 <!-- .element: class="title" -->
 ## Tower GPT-2 + Persona Experiment Results<!-- .element: class="subtitle" -->
 
 <div class="title-name">
@@ -42,7 +42,14 @@ Yu-Hung Wu @ Academia Sinica
 
 ## Experiment Results: Training Loss
 
+- Tower GPT-2 + global position model has the lowest training loss
+
+![](attachments/2021-12-01-09-40-10.png) <!-- .element: class="img70" -->
+
 ----
 
 ## Experiment Results: Validation Perplexity
 
+- Basic tower GPT-2 model has the lowest perplexity
+
+![](attachments/2021-12-01-09-41-34.png) <!-- .element: class="img70" -->
