--- a/content/pr_20211215.md
+++ b/content/pr_20211215.md
@@ -338,9 +338,9 @@ Yu-Hung Wu @ Academia Sinica
 
 ## Motivation
 
-- Encapsulate the model into a new class, 
+- Make distributed data parallel (DDP) easier and more reusable. 
+- Encapsulate the model into a new class.
 - Improve the readability and the reusability of our code.
-- Make distributed data parallel (DDP) easier and more reusable.
 
 ----
 
