--- a/content/Seminar_20211015.md
+++ b/content/Seminar_20211015.md
@@ -2,6 +2,7 @@
 titie: 'Seminar - 20211015'
 date: "2021-10-15"
 theme: theme/mytheme.css
+external_link: ""
 ---
 
 # DC-BERT: Decoupling Question and Document for Efficient Contextual Encoding <!-- .element: class="title" -->
