--- a/content/pr_20220413.md
+++ b/content/pr_20220413.md
@@ -19,7 +19,7 @@ Yu-Hung Wu @ Academia Sinica
 | Object                   | Original                                                           | Modified                                                                                                                            |
 | ------------------------ | ------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------- |
 | Standard deviation (std) | $\sigma = Sigmoid(Linear(E_{[CLS]}))$                              | $\sigma = ReLU(Linear(E_{[CLS]}))$                                                                                                  |
-| Bell curve vector        | $V = [f(0), f(1), f(2)...f(N)]$, where $N$ is the sequence length. | $V = [f(\frac{2\times0}{N-1} - 1), f(\frac{2\times1}{N-1} - 1),...f(\frac{2\times N}{N-1} - 1)]$, where $N$ is the sequence length. |
+| Bell curve vector        | $V = [f(0), f(1), f(2)...f(N-1)]$, where $N$ is the sequence length. | $V = [f(\frac{2\times0}{N-1} - 1), f(\frac{2\times1}{N-1} - 1),...f(\frac{2\times (N-1)}{N-1} - 1)]$, where $N$ is the sequence length. |
 | Thresholding             | $V' = Threshold(V, T, 1)$                                          | $V' = Threshold(V, T, 0)$                                                                                                           |
 | Smoothing                | $M = 1 - V'^{p}$, where $p$ is a hyperparameter.                   | $M = tanh(p\cdot V')$, where $p$ is a hyperparameter.                                                                               |
 
