--- a/content/pr_20220427.md
+++ b/content/pr_20220427.md
@@ -130,6 +130,6 @@ nan
 
     - Stage #1 done, but haven't yet trained.
 
-- Todos
+- Todo
     1. Apply window size constraint to stage #1
-    2. Investigate the computational cost in stage #2
+    2. Investigate the computational cost in stage #sourceererer2
