--- a/content/pr_20220511.md
+++ b/content/pr_20220511.md
@@ -17,14 +17,12 @@ Yu-Hung Wu @ Academia Sinica
 
 ## Outline
 
-- Previous Models
-- Proposed Model
-- Results & Studys
-- Conclusion
+- Stage #1 Experiment
+- Stage #2 Implementation problem
 
 ---
 
-## Stage #1 Experiment (without constraint)<!-- .element: class="section-title" -->
+## Stage #1 Experiment (without constraint) <!-- .element: class="section-title" -->
 
 ----
 
@@ -47,7 +45,7 @@ Yu-Hung Wu @ Academia Sinica
 
 ----
 
-## Standatd Deviation Training Curve
+## Standard Deviation Training Curve
 
 ![](attachments/2022-05-10-17-07-49.png) <!-- .element: class="img90" -->
 
@@ -55,7 +53,7 @@ Yu-Hung Wu @ Academia Sinica
 
 ----
 
-## Standatd Deviation Training Curve
+## Standard Deviation Training Curve
 
 - When $\sigma$ = 1, each token can actually attends up to 29 tokens (w = 14)
 
@@ -67,15 +65,17 @@ Yu-Hung Wu @ Academia Sinica
 
 ----
 
-## Standatd Deviation Training Curve
+## Standard Deviation Training Curve
 
 * Times the learning rate by 10
 
-111 (w = 55)
+![](attachments/2022-05-10-22-53-45.png) <!-- .element: class="img60" -->
+
+- $\sigma$ increases from 1 to 15 (when $\sigma$ = 15, each token can attends up to 111 tokens)
 
 ----
 
-## Standatd Deviation Training Curve
+## Standard Deviation Training Curve
 
 * Times the learning rate by 100
 
@@ -94,3 +94,30 @@ Yu-Hung Wu @ Academia Sinica
 
 ----
 
+## Next Step
+
+- Add constraint to stage #1
+
+- Try another slicing-like distribution
+
+---
+
+## Stage #2 Implementation problem <!-- .element: class="section-title" -->
+
+----
+
+## ```Longformer``` Experiements
+
+![](attachments/2022-05-10-23-00-22.png)
+
+----
+
+## Implementations
+
+![](attachments/2022-03-03-09-51-35.png) <!-- .element: class="img35" -->
+
+- Colored blocks is the **longformer-chunk** implementation, however it only applies to fixed window size.
+
+- If we calculate the gray part separately (**longformer-loop**), it is unusably slow.
+
+- **longformer-cuda** *may* be a possible solution for dynamic attention window.
