--- a/content/pr_20220511.md
+++ b/content/pr_20220511.md
@@ -67,7 +67,7 @@ Yu-Hung Wu @ Academia Sinica
 
 ## Standard Deviation Training Curve
 
-* Times the learning rate by 10
+* Times the learning rate of $U_{d}$ and $W_{p}$ by 10 ($\sigma = U_{d}*tanh(Q_{i}W_{p})$)
 
 ![](attachments/2022-05-10-22-53-45.png) <!-- .element: class="img60" -->
 
@@ -77,7 +77,7 @@ Yu-Hung Wu @ Academia Sinica
 
 ## Standard Deviation Training Curve
 
-* Times the learning rate by 100
+* Times the learning rate of $U_{d}$ and $W_{p}$ by 100
 
 ![](attachments/2022-05-10-17-10-44.png) <!-- .element: class="img90" -->
 
@@ -85,13 +85,32 @@ Yu-Hung Wu @ Academia Sinica
 
 ## Training Result
 
+1. Dynamic standard deviation
+
 | Exp Setting                       | Testing F1 Score | Testing EM Score |
 | --------------------------------- | ---------------- | ---------------- |
-| Normal LR                         | 57.29            | 49.13            |
-| LR*10                             | **59.42**            | **51.92**            |
-| LR*100                            | 58.01            | 50.02            |
-| *Window size = 128 (non-dynamic)* | *73.25*          | *68.08*          |
+| Dynamic $\sigma$ (start from 1)   | 57.29            | 49.13            |
+| Dynamic $\sigma$ (start from 9.5) |                  |                  |
+| LR*10 (start from 1)              | 59.42            | 51.92            |
+| LR*100 (start from 1)             | 58.01            | 50.02            |
 
+2. Fixed standard deviation
+| Exp Setting                 | Testing F1 Score | Testing EM Score |
+| --------------------------- | ---------------- | ---------------- |
+| **Fixed $\sigma$  (w=14)**  |                  |                  |
+| **Fixed $\sigma$  (w=44)**  |                  |                  |
+| **Fixed $\sigma$  (w=128)** |                  |                  |
+| **Fixed $\sigma$  (w=112)** |                  |                  |
+
+
+3. Fixed window size (w/o standard deviation)
+| Exp Setting                 | Testing F1 Score | Testing EM Score |
+| --------------------------- | ---------------- | ---------------- |
+| Fixed window size (256)     | 73.78            | 68.99            |
+| **Fixed window size (128)** | 73.11            | 68.00            |
+| Fixed window size (112)     | 72.84            | 67.72            |
+| **Fixed window size (44)**  | 72.22            | 66.91            |
+| **Fixed window size (14)**  |                  |                  |
 ----
 
 ## Next Step
@@ -99,6 +118,8 @@ Yu-Hung Wu @ Academia Sinica
 - Add constraint to stage #1
 
 - Try another slicing-like distribution
+
+- sigma = 10000, w = 14, 44
 
 ---
 
