--- a/content/pr_20220525.md
+++ b/content/pr_20220525.md
@@ -32,21 +32,22 @@ Yu-Hung Wu @ IIS, Academia Sinica
 
 1. Dynamic standard deviation
 
-| Exp Setting | Starting $\sigma$ | Ending $\sigma$ | Testing F1 Score | Testing EM Score |
-| ----------- | ----------------- | --------------- | ---------------- | ---------------- |
-| Normal LR   | 1.0               | 9.5             | 57.29            | 49.13            |
-| Normal LR   | 9.5               |                 |                  |                  |
-| LR*10       | 1.0               | 15.0            | 59.42            | 51.92            |
-| LR*100      | 1.0               | N/A             | 58.01            | 50.02            |
+| Exp Setting   | Starting $\sigma$ | Ending $\sigma$ | Testing F1 Score | Testing EM Score |
+| ------------- | ----------------- | --------------- | ---------------- | ---------------- |
+| **Normal LR** | 1.0               | 8.0             | 59.35            | 52.03            |
+| **Normal LR** | 9.5               | 17.3            | 58.30            | 51.07            |
+| LR*10         | 1.0               | 15.0            | 59.42            | 51.92            |
+| LR*100        | 1.0               | N/A             | 58.01            | 50.02            |
 
-2. Fixed standard deviation
+1. Fixed standard deviation
 
-| Exp Setting                                | Testing F1 Score | Testing EM Score |
-| ------------------------------------------ | ---------------- | ---------------- |
-| **Fixed $\sigma$  ($\sigma$=1.0, w=14)**   |                  |                  |
-| **Fixed $\sigma$  ($\sigma$=9.5, w=44)**   | 53.08            | 46.19            |
-| **Fixed $\sigma$  ($\sigma$=64, w=112)**   |                  |                  |
-| **Fixed $\sigma$  ($\sigma$=5000, w=128)** | 53.50            | 43.80            |
+| Exp Setting                                 | Testing F1 Score | Testing EM Score |
+| ------------------------------------------- | ---------------- | ---------------- |
+| **Fixed $\sigma$  ($\sigma$=1.0, w=14)**    | 56.59            | 49.23            |
+| **Fixed $\sigma$  ($\sigma$=9.5, w=44)**    | 58.47            | 50.96            |
+| **Fixed $\sigma$  ($\sigma$=64, w=112)**    | 58.15            | 49.69            |
+| **Fixed $\sigma$  ($\sigma$=1000, w=128)**  | 53.65            | 43.89            |
+| **Fixed $\sigma$  ($\sigma$=50000, w=128)** | 53.30            | 43.41            |
 
 ----
 
@@ -60,7 +61,7 @@ Yu-Hung Wu @ IIS, Academia Sinica
 | **Fixed window size (128)** | 73.11            | 68.00            |
 | Fixed window size (112)     | 72.84            | 67.72            |
 | **Fixed window size (44)**  | 72.22            | 66.91            |
-| **Fixed window size (14)**  |                  |                  |
+
 ----
 
 
