--- a/content/pr_20220525.md
+++ b/content/pr_20220525.md
@@ -13,20 +13,9 @@ external_link: ""
 Yu-Hung Wu @ IIS, Academia Sinica
 </div>
 
----
-
-## Outline
-
-- Previous Models
-- Proposed Model
-- Results & Studys
-- Conclusion
+https://marzear.github.io/slides/pr_20220525.html <!-- .element: class="footnote" -->
 
 ---
-
-## Previous Model  <!-- .element: class="section-title" -->
-
-----
 
 ## Results
 
@@ -39,7 +28,7 @@ Yu-Hung Wu @ IIS, Academia Sinica
 | LR*10         | 1.0               | 15.0            | 59.42            | 51.92            |
 | LR*100        | 1.0               | 58.2            | 58.01            | 50.02            |
 
-1. Fixed standard deviation
+2. Fixed standard deviation
 
 | Exp Setting                                 | Testing F1 Score | Testing EM Score |
 | ------------------------------------------- | ---------------- | ---------------- |
@@ -49,7 +38,7 @@ Yu-Hung Wu @ IIS, Academia Sinica
 | **Fixed $\sigma$  ($\sigma$=1000, w=128)**  | 53.65            | 43.89            |
 | **Fixed $\sigma$  ($\sigma$=50000, w=128)** | 53.30            | 43.41            |
 
-----
+---
 
 ## Results
 
@@ -62,9 +51,54 @@ Yu-Hung Wu @ IIS, Academia Sinica
 | Fixed window size (112)     | 72.84            | 67.72            |
 | **Fixed window size (44)**  | 72.22            | 66.91            |
 
-----
+---
 
+## Observations
 
-## pics
+1. Adding normal distribution to the attention weights has negative effect to the performance.
 
-![](attachments/2021-07-06-20-47-53.png) <!-- .element: class="img85" -->
+2. Using token embeddings to predict $\sigma$s has worked.
+
+3. Increasing the learning rate of $U_{d}$ and $W_{p}$ (both contribute to the calculation of $\sigma$) improves the performance.
+
+4. Increasing $\sigma$ has negative effect to the performance.
+
+---
+
+## Problems
+
+* *Longformer* uses global attention + sliding window method.
+
+* Global attention tokens attend to every tokens; every token attend to global attention tokens.
+
+![](attachments/2022-05-24-12-16-29.png)
+
+---
+
+## Problems.
+
+* Each token calculates its attention score base on global tokens + sliding window tokens.
+
+* Our purpose is to only accelerate the memory efficiency of "sliding window tokens"; therefore, we only apply our method to sliding window tokens.
+
+* Since all values of normal distribution PDF curve < 1, it decreases the attention weights itself.
+
+---
+
+## Problems..
+
+* If $\sigma = 50000$, the curve is very close to uniform distribution.
+
+* However, after the global attention tokens participating in the attention weight calculation, the weights of sliding window tokens are nearly ZERO!
+
+![](attachments/2022-05-24-12-37-45.png)
+
+---
+
+## Modification
+
+* Original normal distribution curve: $U_{i, j} = \frac{1}{\sigma\sqrt{2\pi}}e^{-\frac{1}{2}\left(\frac{j-i}{\sigma}\right)^{2}\}$, where $\sigma$ is a learnable standard deviation of the normal distribution, $j$ is the position id of a key and $i$ is the position id of a query.
+
+* Modified ~~normal distribution~~ bell curve: $U_{i, j} = e^{-\frac{1}{2}\left(\frac{j-i}{\sigma}\right)^{2}\}$.
+
+* The maximum value of the bell curve is 1.
