--- a/content/pr_20220525.md
+++ b/content/pr_20220525.md
@@ -17,6 +17,17 @@ https://marzear.github.io/slides/pr_20220525.html <!-- .element: class="footnote
 
 ---
 
+## Outline
+
+- Dynamic Longformer
+- FJU-chatbot Dataset
+
+---
+
+## Dynamic Longformer <!-- .element: class="section-title" -->
+
+----
+
 ## Results
 
 1. Dynamic standard deviation
@@ -38,7 +49,7 @@ https://marzear.github.io/slides/pr_20220525.html <!-- .element: class="footnote
 | **Fixed $\sigma$  ($\sigma$=1000, w=128)**  | 53.65            | 43.89            |
 | **Fixed $\sigma$  ($\sigma$=50000, w=128)** | 53.30            | 43.41            |
 
----
+----
 
 ## Results
 
@@ -51,7 +62,7 @@ https://marzear.github.io/slides/pr_20220525.html <!-- .element: class="footnote
 | Fixed window size (112)     | 72.84            | 67.72            |
 | **Fixed window size (44)**  | 72.22            | 66.91            |
 
----
+----
 
 ## Observations
 
@@ -63,7 +74,7 @@ https://marzear.github.io/slides/pr_20220525.html <!-- .element: class="footnote
 
 4. Increasing $\sigma$ has negative effect to the performance.
 
----
+----
 
 ## Problems
 
@@ -73,7 +84,7 @@ https://marzear.github.io/slides/pr_20220525.html <!-- .element: class="footnote
 
 ![](attachments/2022-05-24-12-16-29.png)
 
----
+----
 
 ## Problems.
 
@@ -83,7 +94,7 @@ https://marzear.github.io/slides/pr_20220525.html <!-- .element: class="footnote
 
 * Since all values of normal distribution PDF curve < 1, it decreases the attention weights itself.
 
----
+----
 
 ## Problems..
 
@@ -93,7 +104,7 @@ https://marzear.github.io/slides/pr_20220525.html <!-- .element: class="footnote
 
 ![](attachments/2022-05-24-12-37-45.png)
 
----
+----
 
 ## Modification
 
@@ -102,3 +113,116 @@ https://marzear.github.io/slides/pr_20220525.html <!-- .element: class="footnote
 * Modified ~~normal distribution~~ bell curve: $U_{i, j} = e^{-\frac{1}{2}\left(\frac{j-i}{\sigma}\right)^{2}\}$.
 
 * The maximum value of the bell curve is 1.
+
+<div id="left"> 
+
+![](attachments/2022-05-24-13-30-30.png) <!-- .element: class="img90" --> 
+
+</div>
+<div id="right"> 
+
+![](attachments/2022-05-24-13-32-07.png) <!-- .element: class="img90" -->
+
+ </div>
+
+----
+
+## $\sigma$ curve
+
+* from 1 to 17,000, with just 20% of training steps.
+
+![](attachments/2022-05-24-19-07-37.png) <!-- .element: class="img90" -->
+
+---
+
+## FJU chatbot Dataset <!-- .element: class="section-title" -->
+
+----
+
+## Dataset
+
+* The dataset are converted in JSON format.
+
+```json
+{
+  "category":"relationship",
+  "dialogue":[
+    {
+      "utterance":"我覺得跟阿公阿嬤好像很難聊天",
+      "speaker":"user"
+    },
+    {
+      "utterance":"怎麼會，你們不常見面嗎",
+      "speaker":"bot"
+    },
+    {
+      "utterance":"也不是，一個禮拜一次啊",
+      "speaker":"user"
+    },
+    {
+      "utterance":"那你有沒有學著好好聽他們說話",
+      "speaker":"bot"
+    },
+    {
+      "utterance":"沒有耶…",
+      "speaker":"user"
+    },
+    {
+      "utterance":"他們可能很想跟你分享，你下次可以試著問問他們之前小時候的故事啊～",
+      "speaker":"bot"
+    },
+    {
+      "utterance":"我下次努力試試～他們其實平時也很關心我",
+      "speaker":"user"
+    },
+    {
+      "utterance":"對啊，或你也可以關心他們一下，像有沒有睡好啊，吃飽沒之類的",
+      "speaker":"bot"
+    },
+    {
+      "utterance":"我知道了，我會努力的",
+      "speaker":"user"
+    },
+    {
+      "utterance":"加油加油！",
+      "speaker":"bot"
+    }
+  ],
+  "id":"4e90b44c-87b9-4764-a675-5f1c95233f0d",
+  "university":"fju",
+  "date":"20211201"
+}
+```
+
+----
+
+## Dataset.
+
+* Each element represents a dialogue.
+
+* Specification of each element:
+  * ```category```: ```str```, represents the category of the dialogue.
+    * Must be one of these: [food, clothing, housing, transportation, education, entertainment, relationship(人際關係), club(社團), work(工作/打工), covid(疫情)]
+  * ```dialogue```: ```list```, Contains the utterances.
+  * ```id```: ```str```, an unique id.
+  * ```university```: ```str```, source of the dialogue.
+    * Must be one of these: [fju(輔仁), ntue(國北教)]
+  * ```date```: ```str```.
+
+----
+
+## Statistics
+
+| Category       | 下新莊區輔仁大學 | 差點被台大合併的國北教 | **Total**  |
+| -------------- | ---------------- | ---------------------- | ---------- |
+| food           | 172              | 92                     | 264        |
+| clothing       | 234              | 0                      | 234        |
+| housing        | 102              | 23                     | 125        |
+| transportation | 168              | 61                     | 229        |
+| education      | 275              | 127                    | 402        |
+| entertainment  | 383              | 232                    | 615        |
+| club           | 33               | 0                      | 33         |
+| relationship   | 145              | 149                    | 294        |
+| work           | 20               | 21                     | 41         |
+| covid          | 40               | 0                      | 40         |
+| **total**      | 1572             | 705                    | ***2277*** |
