--- a/content/pr_20220608.md
+++ b/content/pr_20220608.md
@@ -31,27 +31,35 @@ https://arxiv.org <!-- .element: class="footnote" -->
 1. Fixed $\sigma$ (window size = 128)
 
 | Setting                                 | Testing F1 Score | Testing EM Score |
-| ------------------------------------------- | ---------------- | ---------------- |
-| **Fixed $\sigma$  ($\sigma$=1.0, w=14)**    | 56.59            | 49.23            |
-| **Fixed $\sigma$  ($\sigma$=10.0, w=48)**    | 58.47            | 50.96            |
-| **Fixed $\sigma$  ($\sigma$=1000)**    | 73.10           | 68.21            |
-| **Fixed $\sigma$  ($\sigma$=25000)**  | 73.40            | 68.23            |
-| **Fixed $\sigma$  ($\sigma$=50000)** | 73.63            | 68.56            |
-| *Fixed window size (128) (Baseline)*| *73.11*|*68.00*|
+| --------------------------------------- | ---------------- | ---------------- |
+| **Fixed $\sigma$  ($\sigma$=1, w=14)**  | 64.87            | 59.48            |
+| **Fixed $\sigma$  ($\sigma$=10, w=45)** | 69.38            | 64.38            |
+| **Fixed $\sigma$  ($\sigma$=100)**      |                  |                  |
+| **Fixed $\sigma$  ($\sigma$=1000)**     | 73.10            | 68.21            |
+| **Fixed $\sigma$  ($\sigma$=25000)**    | 73.40            | 68.23            |
+| **Fixed $\sigma$  ($\sigma$=50000)**    | 73.63            | 68.56            |
+| *Fixed window size (128) (Baseline)*    | *73.11*          | *68.00*          |
 
-2. Dynamic standard deviation (unconstrained)
+2. Dynamic $\sigma$ (unconstrained)
 
-| Setting   | Starting $\sigma$ | Ending $\sigma$ | Testing F1 Score | Testing EM Score |
-| ------------- | ----------------- | --------------- | ---------------- | ---------------- |
-| LR = $3e^{-4}$ | 1.0               | 102.3             | 70.56            | 65.53            |
-| LR = $3e^{-2}$         | 1.0               | 15.0            | 59.42            | 51.92            |
+| Setting            | Starting $\sigma$ | Ending $\sigma$ | Testing F1 Score | Testing EM Score |
+| ------------------ | ----------------- | --------------- | ---------------- | ---------------- |
+| **LR = $3e^{-4}$** | 1.0               | 102.3           | 70.56            | 65.53            |
+| **LR = $3e^{-2}$** | 1.0               | 23635.3         | 72.75            | 67.52            |
 
 ----
 
 ## Results
 
+3. Dynamic $\sigma$ **(constrained)**
+
+| Setting                         | Testing F1 Score | Testing EM Score |
+| ------------------------------- | ---------------- | ---------------- |
+| **avg. $\sigma$ = 10**          | 70.67            | 65.71            |
+| Fixed $\sigma$ = 10 (baseline)  | 69.38            | 64.38            |
+| **avg. $\sigma$ = 100**         |                  |                  |
+| Fixed $\sigma$ = 100 (baseline) |                  |                  |
+
 ----
 
 ## pics
-
-![](attachments/2022-07-06-20-47-53.png) <!-- .element: class="img85" -->
