--- a/content/pr_20220608.md
+++ b/content/pr_20220608.md
@@ -13,7 +13,7 @@ external_link: ""
 Yu-Hung Wu @ IIS, Academia Sinica
 </div>
 
-https://arxiv.org <!-- .element: class="footnote" -->
+https://marzear.github.io/slides/pr_20220608.html <!-- .element: class="footnote" -->
 
 ---
 
@@ -69,6 +69,21 @@ https://arxiv.org <!-- .element: class="footnote" -->
 </div>
 ---
 
+## $\sigma$'s Standard Deviation
+
+<div id="left"> 
+
+![](attachments/2022-06-08-00-16-06.png) <!-- .element: class="img130" -->
+
+</div>
+<div id="right">
+
+![](attachments/2022-06-08-00-18-12.png) <!-- .element: class="img130" -->
+
+</div>
+
+---
+
 ## Todo
 
 - A two-stage training:
@@ -78,7 +93,25 @@ https://arxiv.org <!-- .element: class="footnote" -->
     2. **Update the model with a large scale using the learned strategy**
         - **Only update the backbone model (using the slicing window strategy to optimize the computational cost)**
 
+
+---
+
+## Global Attention (GA) Investigation
+
+| Setting                         | **Validation** F1 Score | **Validation** EM Score |
+| ------------------------------- | ---------------- | ---------------- |
+| **avg. $\sigma$ = 10, w/o GA**       | 40.09            | 35.42            |
+| **fixed $\sigma$ = 10, w/o GA**      | 34.60            | 30.29            |
+| **avg. $\sigma$ = 10, w/ GA** (baseline)      |70.67|65.71|
+
+- Preliminary observation: In **avg. $\sigma$ = 10, w/o GA** experiment, padding tokens share less $\sigma$ then others.
+
 ---
 
 ## Seminar Paper
 
+- Topic: *ProphetChat: Enhancing Dialogue Generation with Simulation of Future Conversation*
+
+- Utilizing the simulated dialogue futures in the inference phase to enhance response generation.
+
+- Estimate $P(response|history, feature)$.
