--- a/content/pr_20220608.md
+++ b/content/pr_20220608.md
@@ -112,6 +112,8 @@ https://marzear.github.io/slides/pr_20220608.html <!-- .element: class="footnote
 
 - Topic: *ProphetChat: Enhancing Dialogue Generation with Simulation of Future Conversation*
 
+- Conference: ACL 2022
+
 - Utilizing the simulated dialogue futures in the inference phase to enhance response generation.
 
-- Estimate $P(response|history, feature)$.
+- Estimate $P(response|history, future)$.
